# ocy

./: Cargo.toml  README.md  justfile
data/: banner.txt
ocy-core/: Cargo.toml
ocy-core/src/: cleaner.rs  command.rs  filesystem.rs  lib.rs  matcher.rs  models.rs  test_utils.rs  walker.rs
project-cleaner-core/: Cargo.toml
project-cleaner-core/src/: cleaner.rs  filesystem.rs  matcher.rs  walker.rs
src/: filesize.rs  main.rs  matchers.rs  notifiers.rs  options.rs  utils.rs
