[package]
name = "ocy"
version = "0.1.0"
authors = ["Alexandre Delattre <alexandre.delattre.biz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "ocy-core"
]

[dependencies]
eyre = "0.6"
glob = "0.3"
humansize = "1.1"
colored = "2.0"
ocy-core = { path = "./ocy-core" }
indicatif = "0.15"

[profile.release]
lto = true
codegen-units = 1