[package]
name = "ocy"
version = "0.1.2"
authors = ["Alexandre Delattre <alexandre.delattre.biz@gmail.com>"]
edition = "2018"
description = "ocy is a simple project cleaner CLI"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "ocy-core"
]

[dependencies]
eyre = "0.6"
glob = "0.3"
colored = "2.0"
ocy-core = { path = "./ocy-core", version = "0.1.2" }
indicatif = "0.16"
gumdrop = "0.8"

[profile.release]
lto = true
codegen-units = 1