[package]
name = "ocy"
version = "0.1.7"
authors = ["Alexandre Delattre <alexandre.delattre.biz@gmail.com>"]
edition = "2021"
description = "ocy is a simple project cleaner CLI"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "ocy-core"
]

[dependencies]
eyre = "0.6"
glob = "0.3"
colored = "2.0"
ocy-core = { path = "./ocy-core", version = "0.1.7" }
indicatif = "0.17"
gumdrop = "0.8"

[profile.release]
lto = true
codegen-units = 1