[package]
name = "ocy-core"
version = "0.1.5"
authors = ["Alexandre Delattre <alexandre.delattre.biz@gmail.com>"]
edition = "2018"
description = "Core package for ocy project cleaner CLI"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
glob = "0.3"